@@ -3638,6 +3638,41 @@
                 }
             },
             "working": true
+        },
+        "obs-studio": {
+            "name": "OBS Studio",
+            "img": "obs-studio",
+            "main-package": "obs-studio",
+            "launch-command": "obs",
+            "install-packages": "obs-studio",
+            "remove-packages": "obs-studio",
+            "description": [
+                "Free and Open Source software for video recording and",
+                "live streaming. Supported features include, encoding",
+                "using H264 (x264) and AAC, support for Intel Quick",
+                "Sync Video (QSV) and NVENC, unlimited number of scenes",
+                "and sources. Live RTMP streaming to Twitch, YouTube,",
+                "DailyMotion, Hitbox and more. File output to MP4 or FLV,",
+                "GPU-based game capture for high performance game streaming,",
+                "capture device support (webcams, capture cards, etc),",
+                "bi-linear or lanczos3 resampling."
+            ],
+            "alternate-to": "telestream Wirecast",
+            "subcategory": "Audio Production",
+            "open-source": true,
+            "url-info": "https://obsproject.com/index",
+            "url-android": null,
+            "url-ios": null,
+            "arch": "i386,amd64",
+            "releases": "wily",
+            "pre-install": {
+                "all": {
+                    "method": "ppa",
+                    "enable-ppa": "ppa:obsproject/obs-studio",
+                    "source-file": "obsproject-ubuntu-obs-studio-CODENAME"
+                }
+            },
+            "working": true
         },        
         "pithos": {
             "name": "Pithos",
