@@ -11,7 +11,8 @@ ubuntu-mate-welcome (16.04.4) xenial; urgency=medium
   * Fix Upgrade System, so it is compatible with Ubuntu MATE Base.
   * Add framework for accepting translations.
   * Add Ardour, Corebird, Gajim, GNOME Software, Time Tracker,
-  Nuvola Player, Pinta, SparkleShare, Vivaldi, Wireshark and Zenmap.
+  Nuvola Player, OBS Studio, Pinta, SparkleShare, Vivaldi, Wireshark
+  and Zenmap.
   * Add ubuntu-make PPA.
   * Update Software to consistenly use the name Software Boutique.
   * Update splash screen.
